--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>my index</title>
 </head>
 <body>
-    asfds
+    feigy
     <h1>you are מקסימה</h1>
     <h1> very nice</h1>   
 </body>
